name:                statgen
version:             0.1.0.0
synopsis:            A static site generated with Hakyll
description:         Please see README.md
homepage:            http://github.com/codebje/statgen#readme
license:             BSD3
license-file:        LICENSE
author:              Byron Ellacott
copyright:           2015 Byron Ellacott
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable statgen
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:        base == 4.*,
                        hakyll == 4.7.*
                      , pandoc
